Fix a couple of bugs

--- a/template-ballot.tex
+++ b/template-ballot.tex
@@ -17,7 +17,7 @@
 
     Mark the candidates numerically in order of preference. 
 
-    Start from "1" as your preferred choice and use ascending integers.
+    Start from ``1" as your preferred choice and use ascending integers.
 
     Rank as many candidates as you wish.
 
