Patch for upcoming EGM

--- a/template-ballot.tex
+++ b/template-ballot.tex
@@ -15,11 +15,11 @@
         \Large{\textbf{\VAR{title}}}
     \end{center}
 
-    Mark the candidates numerically in order of preference. 
+    Mark the options  numerically in order of preference. 
 
     Start from ``1" as your preferred choice and use ascending integers.
 
-    Rank as many candidates as you wish.
+    Rank as many options as you wish.
 
     \begin{itemize}
         \BLOCK{ for candidate in candidate_list }
